added Java 17 examples